@@ -1,215 +1,123 @@
 package base.domain.trick;
 
 import base.domain.card.Suit;
-import base.domain.player.Player;
 import base.domain.card.Card;
+import base.domain.player.PlayerId;
+import base.domain.turn.PlayTurn;
+
 import java.util.ArrayList;
 import java.util.List;
 
 /**
- * Represents a single trick in a Whist round
- * 
+ * Represents a single trick in a Whist round.
+ * Acts as a passive ledger that records turns and calculates the current winning card.
  * @author John Cai
  * @since 25/02/2026
  */
 public class Trick {
-    /** The maximum number of players/cards in a single trick. */
+    /**
+     * The maximum number of players/cards in a single trick.
+     */
     public static final int MAX_TURNS = 4;
 
     private final Suit trumpSuit;
-    private final Player startingPlayer;
-    private Player winningPlayer;
-    private final List<Turn> turns;
+    private final PlayerId startingPlayerId;
+
+    private PlayerId winningPlayerId;
+    private Card currentWinningCard;
+    private final List<PlayTurn> playTurns;
 
     /**
      * Initializes a new trick.
-     * 
-     * @param startingPlayer The player who leads the trick.
-     * @param trumpSuit      The trump suit for the current round (can be null).
-     * @throws IllegalArgumentException if startingPlayer is null.
+     * @param startingPlayerId The ID of the player who leads the trick.
+     * @param trumpSuit The trump suit for the current round (can be null for Miserie).
+     * @throws IllegalArgumentException if startingPlayerId is null.
      */
-    public Trick(Player startingPlayer, Suit trumpSuit) {
-        if (startingPlayer == null)
-            throw new IllegalArgumentException("Trick: Starting player must exist.");
+    public Trick(PlayerId startingPlayerId, Suit trumpSuit) {
+        if (startingPlayerId == null) {
+            throw new IllegalArgumentException("Trick: Starting player ID must exist.");
+        }
 
         this.trumpSuit = trumpSuit;
-        this.startingPlayer = startingPlayer;
-        this.winningPlayer = null;
-        this.turns = new ArrayList<>();
+        this.startingPlayerId = startingPlayerId;
+        this.winningPlayerId = null;
+        this.currentWinningCard = null;
+        this.playTurns = new ArrayList<>();
     }
 
     /**
      * Identifies the suit of the first card played in this trick.
-     * 
+     *
      * @return The leading suit, or null if no cards have been played.
      */
     public Suit getLeadingSuit() {
-        if (turns.isEmpty())
+        if (playTurns.isEmpty())
             return null;
-        return turns.get(0).playedCard().suit();
+        return playTurns.getFirst().playedCard().suit();
     }
 
-    /** @return The player who started the trick. */
-    public Player getStartingPlayer() {
-        return this.startingPlayer;
+    /** @return The ID of the player who won the trick or is currently winning. */
+    public PlayerId getWinningPlayerId() {
+        return this.winningPlayerId;
     }
 
-    /** @return The player who won the trick (null until 4 cards are played). */
-    public Player getWinningPlayer() {
-        return this.winningPlayer;
+    /** @return The ID of the player who started the trick. */
+    public PlayerId getStartingPlayerId() {
+        return this.startingPlayerId;
     }
 
     /** @return A shallow, immutable copy of the turns played so far. */
-    public List<Turn> getTurns() {
-        return List.copyOf(this.turns);
+    public List<PlayTurn> getTurns() {
+        return List.copyOf(this.playTurns);
     }
 
     /** @return true if the trick contains the maximum number of turns. */
     public boolean isCompleted() {
-        return this.turns.size() >= MAX_TURNS;
+        return this.playTurns.size() >= MAX_TURNS;
     }
 
     /**
-     * Processes a player's move, validates rules, and removes the card from their
-     * hand.
-     * 
-     * @param player     The player attempting to play.
-     * @param playedCard The card to be played.
-     * @throws IllegalArgumentException if the player/card is null, the card is not
-     *                                  in
-     *                                  the player's hand, the player already
-     *                                  played, the move does not follow suit,
-     *                                  or the trick is full.
+     * Records a player's move in the Trick and recalculates the winning player.
+     * Note: Rule validation (e.g., "Must follow suit") and hand mutation MUST be
+     * handled by the Active Coordinator (PlayState) before calling this method.
+     * @param playerId The ID of the player making the move.
+     * @param playedCard The card being played.
+     * @throws IllegalArgumentException if the player already played in this trick.
+     * @throws IllegalStateException if the trick is already full.
      */
-    public void playCard(Player player, Card playedCard) {
-        if (player == null) {
-            throw new IllegalArgumentException("Trick: Player must exist.");
-        }
-        if (playedCard == null) {
-            throw new IllegalArgumentException("Trick: Card must exist.");
+    public void addTurn(PlayerId playerId, Card playedCard) {
+        if (playerId == null || playedCard == null) {
+            throw new IllegalArgumentException("Trick: PlayerId and Card must exist.");
         }
         if (isCompleted()) {
-            throw new IllegalArgumentException("Trick: Trick is already full.");
-        }
-        if (!player.getHand().contains(playedCard)) {
-            throw new IllegalArgumentException("Trick: Card is not in player's hand.");
-        }
-        if (turns.stream().anyMatch(t -> t.player().equals(player))) {
-            throw new IllegalArgumentException("Trick: Player already played this trick.");
+            throw new IllegalStateException("Trick: This trick is already full.");
         }
 
-        Suit leadingSuit = getLeadingSuit();
-        if (leadingSuit != null && playedCard.suit() != leadingSuit && player.hasSuit(leadingSuit)) {
-            throw new IllegalArgumentException("Trick: Must follow leading suit.");
+        // Rule: One card per player
+        if (playTurns.stream().anyMatch(t -> t.playerId().equals(playerId))) {
+            throw new IllegalArgumentException("Trick: Player has already played in this trick.");
         }
 
-        turns.add(new Turn(player, playedCard));
-        player.removeCard(playedCard);
-
-        if (turns.size() == MAX_TURNS) {
-            determineWinner();
-        }
+        playTurns.add(new PlayTurn(playerId, playedCard));
+        updateWinningPlayer(playerId, playedCard);
     }
 
     /**
-     * Evaluates all turns based on Trump priority and Rank to identify the winner.
+     * Updates the state of the trick using the globally defined TrickEvaluator rules.
      */
-    private void determineWinner() {
-        Suit leadingSuit = getLeadingSuit();
-        Player currentWinner = null;
-        Card bestCard = null;
-
-        for (Turn turn : turns) {
-            Player player = turn.player();
-            Card playedCard = turn.playedCard();
-
-            if (bestCard == null) {
-                currentWinner = player;
-                bestCard = playedCard;
-                continue;
-            }
-
-            boolean isNewCardTrump = (this.trumpSuit != null && playedCard.suit() == this.trumpSuit);
-            boolean isBestCardTrump = (this.trumpSuit != null && bestCard.suit() == this.trumpSuit);
-
-            if (isNewCardTrump) {
-                // Trump always beats non-trump; highest trump beats lower trump
-                if (!isBestCardTrump || playedCard.rank().compareTo(bestCard.rank()) > 0) {
-                    currentWinner = player;
-                    bestCard = playedCard;
-                }
-            } else if (!isBestCardTrump) {
-                // If no trump is involved, highest rank of the leading suit wins
-                if (playedCard.suit() == leadingSuit && playedCard.rank().compareTo(bestCard.rank()) > 0) {
-                    currentWinner = player;
-                    bestCard = playedCard;
-                }
-            }
-        }
-        this.winningPlayer = currentWinner;
-    }
-
-    /**
-     * Returns all legal cards a player can play in this trick.
-     * 
-     * @param player The player whose hand is evaluated.
-     * @return A list of legal cards.
-     */
-    public List<Card> getLegalCards(Player player) {
-        if (player == null)
-            return List.of();
-
-        List<Card> legalCards = new ArrayList<>();
-
-        for (Card card : player.getHand()) {
-            if (isLegalCard(player, card)) {
-                legalCards.add(card);
-            }
+    private void updateWinningPlayer(PlayerId playerId, Card playedCard) {
+        if (this.winningPlayerId == null) {
+            this.winningPlayerId = playerId;
+            this.currentWinningCard = playedCard;
+            return;
         }
 
-        return legalCards;
-    }
+        // Delegate the complex math to our Pure Fabrication evaluator!
+        TrickEvaluator evaluator = new TrickEvaluator(getLeadingSuit(), this.trumpSuit);
 
-    /**
-     * Checks whether a given card is legal to play for a player in the current
-     * trick.
-     * 
-     * @param player The player attempting to play.
-     * @param card   The card to check.
-     * @return true if the move is legal, false otherwise.
-     */
-    public boolean isLegalCard(Player player, Card card) {
-        if (player == null || card == null) return false;
-        if (!player.hasCard(card)) return false;
-        return isLegalCardFromHand(player, card);
-    }
-
-    /**
-     * Checks whether a given card from the player's hand is legal to play
-     * @param player The player attempting to play.
-     * @param card The card to check (assumed to be in player's hand).
-     * @return true if the move is legal, false otherwise.
-     */
-    private boolean isLegalCardFromHand(Player player, Card card) {
-        if (player == null || card == null)
-            return false;
-
-        // Trick already full
-        if (isCompleted())
-            return false;
-
-        // Player already played
-        if (turns.stream().anyMatch(t -> t.player().equals(player))) {
-            return false;
+        if (evaluator.doesBeat(playedCard, this.currentWinningCard)) {
+            this.winningPlayerId = playerId;
+            this.currentWinningCard = playedCard;
         }
-
-        // First card → always legal (assuming it's in hand, handled elsewhere)
-        if (turns.isEmpty())
-            return true;
-
-        Suit leadingSuit = getLeadingSuit();
-
-        // Must follow suit if possible
-        return card.suit() == leadingSuit || !player.hasSuit(leadingSuit);
     }
 }
